--- a/java/src/org/apache/axis/utils/resources.properties
+++ b/java/src/org/apache/axis/utils/resources.properties
@@ -568,3 +568,7 @@ deploy06=<!-- or                                                          -->
 deploy07=<!--   java org.apache.axis.client.AdminClient deploy.wsdd       -->
 deploy08=<!--   java org.apache.axis.client.AdminClient undeploy.wsdd     -->
 deploy09=<!--      after the axis server is running                       -->
+
+#NOTE: in cannotFindJNDIHome00, do not translate "EJB" or "JNDI"
+cannotFindJNDIHome00=Cannot find EJB at JNDI location {0}
+cannotCreateInitialContext00=Cannot create InitialContext
